# Game2048

./: .gitignore  Actions.cpp  Actions.h  CMakeLists.txt  DownAction.cpp  DownAction.h  LeftAction.cpp  LeftAction.h  RightAction.cpp  RightAction.h  UpActions.cpp  UpActions.h  form.ui  game.cpp  game.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/Action/: Actions.h
include/Action/DownAction/: DownAction.h
include/Action/LeftAction/: LeftAction.h
include/Action/RightAction/: RightAction.h
include/Action/UpAction/: UpActions.h
include/Game/: Game_global.h  game.h
include/Mainwindow/: mainwindow.h
include/Move/: Move.h
src/: Actions.cpp  DownAction.cpp  LeftAction.cpp  Main.cpp  Move.cpp  RightAction.cpp  UpActions.cpp  game.cpp  mainwindow.cpp  mainwindow.ui
